--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -37,7 +37,7 @@
     </header>
     <div class="top">
         <div class="mainvisual">
-            <img src="mainvisual.png" alt="">
+            <%= image_tag "mainvisual.png" %>
             <div class="button">
                 <!-- <a href="">SIGN UP</a> -->
                 <%= link_to("SIGN UP", "/users/sign_up") %>
