--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -34,25 +34,25 @@
       <div class="form-group field">
         <div class="detail">
             <div class="kind_of_practice">
-                <%= image_tag "/assets/weather-icon.svg" %>
+                <%= image_tag "weather-icon.svg" %>
                 <p class="practice-menu">練習</p>
                 <%= form.select :kind_of_practice, [ ["ジョグ","ジョグ"], ["ペース走", "ペース走"], ["インターバル", "インターバル"], ["レペティション", "レペティション"], ["ビルドアップ", "ビルドアップ"], ["距離走", "距離走"], ["レース", "レース"], ["レスト", "レスト"] ], prompt: "---" %>
             </div>
             <div class="situation">
                 <div class="weather">
-                    <%= image_tag "/assets/weather-icon.svg" %>
+                    <%= image_tag "weather-icon.svg" %>
                     <p class="weather-kind">天気</p>
                     <%= form.select :weather, [ ["晴れ","晴れ"], ["曇り", "曇り"], ["雨", "雨"], ["雪", "雪"]], prompt: "---" %>
                 </div>
                 <div class="place">
-                    <%= image_tag "/assets/weather-icon.svg" %>
+                    <%= image_tag "weather-icon.svg" %>
                     <p class="place-kind">場所</p>
                     <%= form.select :place, [ ["ロード","ロード"], ["トラック", "トラック"], ["クロカン", "クロカン"]], prompt: "---" %>
                 </div>
             </div>
             
             <div class="strength">
-                <%= image_tag "/assets/strength-icon.svg" %>
+                <%= image_tag "strength-icon.svg" %>
                 <p class="strength-phase">強度</p>
                 <%= form.select :strength, [ ["1", "1"], ["2", "2"], ["3", "3"], ["4", "4"], ["5", "5"]], prompt: "---" %>
             </div>
