--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -121,3 +121,12 @@
 
     }
 }
+
+#error_explanation {
+    color: red;
+    border: 1px solid;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
