--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -244,3 +244,13 @@ nav {
         }
     }
 }
+
+//   フラッシュ
+.flash {
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #0BBBD7;
+    color: white;
+    font-weight: 600;
+}
