--- a/app/views/posts/_post_record_fields.html.erb
+++ b/app/views/posts/_post_record_fields.html.erb
@@ -42,6 +42,7 @@
 <script>
 $(function(){
     var switchOption = $('[name="post[kind_of_practice]"]');
+    var switchOption2 = $('#add-btn');
     var switchItems = $('.results');
     var switchItem = $('.type');
     switchItem.hide();
@@ -63,5 +64,24 @@ $(function(){
             }
         }
     });
+    
+    switchOption2.onclick = function(){
+        var option = $('[name="post[kind_of_practice]"]').val();
+        if (option === "レスト"){
+            switchItems.hide();
+        }else if (option === "インターバル" || option === "レペティション"){
+            switchItems.show();
+            switchItem.show();
+            $('.distance-text').text('m');
+        }else{
+            switchItems.show();
+            switchItem.hide();
+            if (option === "ジョグ" || option === "距離走"){
+                $('.distance-text').text('km');
+            }else{
+                $('.distance-text').text('m');
+            }
+        }
+    };
 });
 </script>
