--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,7 +74,7 @@
                 <% end %>
             </li>
             <li class="mypage">
-                <%= link_to "/" do %>
+                <%= link_to "/users/#{current_user.id}/mypage" do %>
                   <%= image_tag "icon_055100_32.png" %>
                   マイページ
                 <% end %>
