--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -94,7 +94,7 @@
 </div>
 
 <script>
-  const practiceToText = (text) => {
+  let practiceToText = (text) => {
       switch(text) {
           case 'ジョグ':
           case 'ペース走':
