--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -142,6 +142,18 @@
     &:hover {
         opacity: 1;
     }
+    .plus {
+        color: #0BBBD7;
+        border-radius: 50%;
+        background-color: white;
+        border-color: #0BBBD7;
+        width: 75px;
+        height: 75px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 30px;
+    }
 }
 /* 練習日誌（月間表示） */
 .practice_diary_header {
@@ -446,6 +458,15 @@
                     font-size: 20px;
                     font-weight: 600;
                 }
+                .edit {
+                    text-align: end;
+                    .profile-edit-btn {
+                        border: #0BBBD7 1px solid;
+                        border-radius: 5px;
+                        font-size: 12px;
+                        color: #0BBBD7;
+                    }
+                }
                 .bio {
                     display: flex;
                     justify-content: center;
@@ -488,5 +509,38 @@
                 }
             }
         }
+    }
+}
+.profile-modal {
+    max-width: 1000px;
+}
+
+/* モーダル */
+.modal-content {
+    .left {
+        width: 45%;
+        padding: 30px;
+        .left-form {
+            p {
+                margin-bottom: 10px;
+            }
+            margin-bottom: 10px;
+            .text_field {
+                width: 100%;
+            }
+        }
+        .two-row {
+            display: flex;
+            align-items: center;
+            justify-content: content;
+            .row {
+                width: 50%;
+            }
+
+        }
+    }
+    .right {
+        width: 55%;
+
     }
 }
