--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -35,6 +35,9 @@
         </div>
         <div class="profile">
             <h3>プロフィール</h3>
+            <div class="edit">
+                <%= link_to 'プロフィールを編集', edit_user_path(@user), remote: true, class: "btn btn-lg, btn-primary, profile-edit-btn" %>
+            </div>
             <div class="bio">
                 <%= image_tag "user_icon.svg", class: "user_icon" %>
                 <p class="name">陸上 太郎</p>
@@ -76,6 +79,7 @@
         </div>
     </div>
 </div>
+<div id="post-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
 
 <script> 
     var ctx = document.getElementById("distance_graph").getContext('2d');
